--- a/html-css/exempel/css-exempel/css-ex1.html
+++ b/html-css/exempel/css-exempel/css-ex1.html
@@ -11,6 +11,10 @@
     <div>
         <h1>CSS exemple</h1>
 <p>En paragraf med text</p>
+<p>En paragraf med text</p>
+<p>En paragraf med text</p>
+<p>En paragraf med text</p>
+
     </div>
 </body>
 </html>
