--- a/html-css/exempel/css-exempel/css-ex3.html
+++ b/html-css/exempel/css-exempel/css-ex3.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>klasser, id:n och @font-face</title>
     <link rel="stylesheet" href="css/css-ex3.css">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital@1&family=Space+Grotesk:wght@300&display=swap" rel="stylesheet">
+
+    
+    
 </head>
 <body>
     <h1 id="title">klasser, id:n och @font-face</h1>
+    <p><a href="#linktest">länk till h3</a></p>
+    <div class="box"></div>
+    <div class="box orange"></div>
     <div class="box"></div>
     <div class="box"></div>
+    <h3 id="linktest"> en ankkare</h3>
+    <h1 id="title">klasser, id:n och @font-face</h1>
+    <div class="box"></div>
+    <div class="box orange"></div>
     <div class="box"></div>
     <div class="box"></div>
 </body>
